Deploy/k3s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - pedropinto.info
    - secretName: tls-secret
  rules:
    - host: pedropinto.info
      http:
        paths:
        - path: /api/v1
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8000
        - path: /ws/
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8000
